--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "baseui": "^10.0.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -19,6 +20,8 @@
     "redux-form": "^8.3.7",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "styletron-engine-atomic": "^1.4.8",
+    "styletron-react": "^6.0.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
